# InfiniMetrics

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  BATCH_DISPATCH_USAGE.md  CODE_REDUCTION_REPORT.md  CURRENT_WORK.md  DEIGN_REFACTORING_GUIDE.md  DISPATCHER_ASYNC_GUIDE.md  DISPATCHER_USAGE.md  DISTRIBUTION_GUIDE.md  FILE_BASED_INPUT_GUIDE.md  FRAMEWORK_RECOMMENDATIONS.md  QUESTIONS_ANSWERS.md  README.md  README_CN.md  REFACTORING_COMPARISON.md  REFACTORING_VERIFICATION_REPORT.md  RESULT_FILE_STRUCTURE.md  SETUP_TEARDOWN_COMPARISON.py  TESTCASE_FORMAT.md  UNIFIED_FRAMEWORK_USAGE.md  VALIDATION_GUIDE.md  adapter.py  add.json  architecture.md  config_output_a_20260119_153344.json  config_output_b_20260119_153344.json  config_with_files.json  dashboard_preview.html  debug_csv.py  debug_dashboard.py  dispatcher.py  dispatcher_example.py  dispatcher_simple.py  elegant_design.py  example_config.json  example_mixed_distributions.json  (+62 more)
.claude/: CLAUDE.md
dashboard/: app.py  common.py  requirements.txt
dashboard-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
db/: __init__.py  cli.py  client.py  commands.py  config.py  importer.py  repository.py  utils.py  watcher.py
docs/: README.md  SOP.md  architecture.md  configuration.md  dashboard.md  development.md  installation.md  output_format.md  quickstart.md  test_input_guide.md  troubleshooting.md
generated_data/: a_1024x1024_float16_20260119_160703.npy  a_1024x1024_float16_20260119_160804.npy  a_128x128_float16_20260119_160808.npy  b_1024x1024_float16_20260119_160703.npy  b_1024x1024_float16_20260119_160804.npy  b_128x128_float16_20260119_160808.npy
infinibench/: adapter.py  dispatcher.py  executor.py  input.py
infinimetrics/: adapter.py  dispatcher.py  executor.py  input.py  test_trace.csv
infinimetrics/hardware/cuda-memory-benchmark/: CMakeLists.txt  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  build.sh
infinimetrics/hardware/cuda-memory-benchmark/include/: bandwidth_test.h  cache_benchmark.h  cuda_utils.h  memory_bandwidth_test.h  performance_test.h  stream_benchmark.h
infinimetrics/hardware/cuda-memory-benchmark/src/: main.cu
new_data/: bw_template.csv
output/: cache_l1_bandwidth_hardware.cudaUnified.Comprehensive.fadfsdf_20260128_160000.csv  cache_l1_bandwidth_hardware.cudaUnified.Comprehensive.fadfsdf_20260128_174400.csv  cache_l1_bandwidth_hardware.cudaUnified.Comprehensive.fadfsdf_20260129_095540.csv  cache_l1_bandwidth_hardware.cudaUnified.Comprehensive.fadfsdf_20260130_155908.csv  cache_l1_bandwidth_hardware.cudaUnified.Comprehensive.fadfsdf_20260203_153447.csv  cache_l2_bandwidth_hardware.cudaUnified.Comprehensive.fadfsdf_20260128_174400.csv  cache_l2_bandwidth_hardware.cudaUnified.Comprehensive.fadfsdf_20260129_095540.csv  cache_l2_bandwidth_hardware.cudaUnified.Comprehensive.fadfsdf_20260130_155908.csv  cache_l2_bandwidth_hardware.cudaUnified.Comprehensive.fadfsdf_20260203_153447.csv  hardware_cudaUnified_Cache_20260115_175015_results.json  hardware_cudaUnified_Cache_20260115_175507_results.json  hardware_cudaUnified_MemoryBandwidth_20260115_175151_results.json  hardware_cudaUnified_STREAM_20260115_175208_results.json  mem_sweep_bidirectional_hardware.cudaUnified.Comprehensive.fadfsdf_20260128_174400.csv  mem_sweep_bidirectional_hardware.cudaUnified.Comprehensive.fadfsdf_20260129_095540.csv  mem_sweep_bidirectional_hardware.cudaUnified.Comprehensive.fadfsdf_20260130_155908.csv  mem_sweep_bidirectional_hardware.cudaUnified.Comprehensive.fadfsdf_20260203_153447.csv  mem_sweep_d2d_hardware.cudaUnified.Comprehensive.fadfsdf_20260128_160000.csv  mem_sweep_d2d_hardware.cudaUnified.Comprehensive.fadfsdf_20260128_174400.csv  mem_sweep_d2d_hardware.cudaUnified.Comprehensive.fadfsdf_20260129_095540.csv  mem_sweep_d2d_hardware.cudaUnified.Comprehensive.fadfsdf_20260130_155908.csv  mem_sweep_d2d_hardware.cudaUnified.Comprehensive.fadfsdf_20260203_153447.csv  mem_sweep_d2h_hardware.cudaUnified.Comprehensive.fadfsdf_20260128_160000.csv  mem_sweep_d2h_hardware.cudaUnified.Comprehensive.fadfsdf_20260128_174400.csv  mem_sweep_d2h_hardware.cudaUnified.Comprehensive.fadfsdf_20260129_095540.csv  mem_sweep_d2h_hardware.cudaUnified.Comprehensive.fadfsdf_20260130_155908.csv  mem_sweep_d2h_hardware.cudaUnified.Comprehensive.fadfsdf_20260203_153447.csv  mem_sweep_h2d_hardware.cudaUnified.Comprehensive.fadfsdf_20260128_160000.csv  (+4 more)
results/: formal_input_result.json  (+1 more)
(+444 files in other folders)
