[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinimetrics"
version = "0.1.0"
description = "An InfiniTensor-featured comprehensive accelerator evaluation framework"
dependencies = [
    "pymongo>=4.0.0",
    "watchdog>=3.0.0",
]

[tool.black]
target-version = ['py310']
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.setuptools.packages.find]
include = ["infinimetrics*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
