[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinimetrics"
version = "0.1.0"
description = "An InfiniTensor-featured comprehensive accelerator evaluation framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
# Inference support
inference = [
    "torch>=2.0.0",
    "vllm>=0.3.0",
]
# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
# Full installation (all optional dependencies)
full = [
    "infinimetrics[inference,dev]",
]

[tool.black]
target-version = ['py310']
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["infinimetrics*"]
