[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinimetrics"
version = "0.1.0"
description = "An InfiniTensor-featured comprehensive accelerator evaluation framework"
dependencies = []

[project.optional-dependencies]
mongodb = ["pymongo>=4.0.0"]
dashboard = ["streamlit>=1.28.0", "plotly>=5.0.0", "pandas>=2.0.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0"]

[tool.black]
target-version = ['py310']
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
